# search-engine

./: .gitignore  CMakeLists.txt  main.cpp
config/: config.json  requests.json
include/: converter.h
src/: converter.cpp
